targets/srv0/k3s/namespaces/legacy-dns-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
  namespace: base-privileged
spec:
  type: ExternalName
  externalName: nfs-server.base.svc.cluster.local
